--- a/index.html
+++ b/index.html
@@ -1,19 +1,167 @@
-<html lang="en"><head><title>Chameleon - web theme for openSUSE</title><link href="./dist/images/app-icons/www-16.png" rel="icon" sizes="16x16" type="image/png"/><link href="./dist/images/app-icons/www.png" rel="icon" sizes="256x256" type="image/png"/><link href="./dist/css/chameleon.css" rel="stylesheet"/><link href="./dist/css/theme-doc.css" rel="stylesheet"/></head><body data-spy="scroll" data-target="#theme-doc-navbar" data-offset="100" style="position: relative;"><nav class="navbar navbar-expand-lg"><a class="navbar-brand" href="#"><img class="mr-2" src="./dist/images/logo/logo-white.svg"/><span class="navbar-title"><span>Chameleon</span></span></a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbar-collapse"><ul class="navbar-nav mr-auto"><li class="nav-item"><a class="nav-link" href="#how-to-use">How to use</a></li><li class="nav-item"><a class="nav-link" href="#design-language">Design language</a></li><li class="nav-item"><a class="nav-link" href="#usability-accessibility">Usability &amp; accessibility</a></li><li class="nav-item"><a class="nav-link" href="#components">Components</a></li><li class="nav-item"><a class="nav-link" href="#graphics">Graphics</a></li><li class="nav-item"><a class="nav-link" href="#examples">Examples</a></li></ul></div></nav><header class="bg-dark text-light py-5 text-center" id="theme-doc-header"><div class="container"><h1 id="theme-doc-title"><div class="d-inline-block bg-light text-dark px-2">CHAMELEON</div></h1><p class="lead">web theme for openSUSE</p></div></header><div class="container"><h2 id="how-to-use">How to use</h2><h3>Link from CDN</h3><pre><code class="html">&lt;link href=&quot;https://static.opensuse.org/chameleon/dist/css/chameleon.css&quot; rel=&quot;stylesheet&quot;/&gt;</code></pre><p>If your application already provides jQuery (MediaWiki, WordPress, etc.):</p><pre><code class="html">&lt;script src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon-no-jquery.js&quot;&gt;&lt;/script&gt;</code></pre><p>Otherwise:</p><pre><code class="html">&lt;script src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon.js&quot;&gt;&lt;/script&gt;</code></pre><h3>Install from NPM</h3><pre><code class="bash">npm install --save opensuse-theme-chameleon</code></pre><h3>Import styles to SaSS</h3><pre><code class="scss">@import '~opensuse-theme-chameleon/src/sass/chameleon';</code></pre><h3>Import JavaScript to Browserify/Webpack</h3><pre><code class="js">require('opensuse-theme-chameleon'); // CommonJS</code></pre><pre><code class="js">import 'opensuse-theme-chameleon'; // ES6</code></pre><h2 id="design-language">Design language</h2><p>Based on
+<html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><title>Chameleon - web theme for openSUSE</title><link href="./dist/images/app-icons/www-16.png" rel="icon" sizes="16x16" type="image/png"/><link href="./dist/images/app-icons/www.png" rel="icon" sizes="256x256" type="image/png"/><link href="./dist/css/chameleon.css" rel="stylesheet"/><link href="./dist/css/theme-doc.css" rel="stylesheet"/></head><body data-spy="scroll" data-target="#theme-doc-navbar" data-offset="100" style="position: relative;"><nav class="navbar navbar-expand-lg"><a class="navbar-brand" href="/"><img class="mr-2" src="./dist/images/logo/logo-white.svg"/><span class="navbar-title"><Chameleon></Chameleon></span></a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbar-collapse"><ul class="navbar-nav mr-auto"><li class="nav-item"><a class="nav-link" href="/">Get Started</a></li><li class="nav-item"><a class="nav-link" href="/elements.html">Elements</a></li><li class="nav-item"><a class="nav-link" href="/components.html">Components</a></li><li class="nav-item"><a class="nav-link" href="/changelog.html">Changelog</a></li></ul></div></nav><div class="container"><h1>Chameleon</h1>
+<p>The Design System implementation of openSUSE..x</p>
+<p>Vivid UI theme for openSUSE websites. Based on Bootstrap 4.1. Apply
+<a href="https://opensuse.github.io/branding-guidelines/">openSUSE Brand Guidelines</a> and
+<a href="https://github.com/openSUSE/artwork">openSUSE Artwork</a>.</p>
+<p><a href="https://l10n.opensuse.org/engage/opensuse-theme-chameleon/?utm_source=widget"><img src="https://l10n.opensuse.org/widgets/opensuse-theme-chameleon/-/master/svg-badge.svg" alt="Translation status"></a></p>
+<h2>Download</h2>
+<h3>Directly download</h3>
+<p><a href="https://github.com/openSUSE/opensuse-theme-chameleon/releases">Download latest releases</a></p>
+<h3>NPM install</h3>
+<pre><code class="language-bash">npm install opensuse-theme-chameleon --save
+</code></pre>
+<h3>Ruby Gem install</h3>
+<p>TODO</p>
+<h3>PHP Composer install</h3>
+<p>TODO</p>
+<h2>Import</h2>
+<h3>HTML link</h3>
+<p>Compiled CSS, JavaScript, fonts and some SVG images are inside <code>dist</code> folder.
+You can directly include/link these files in your HTML template.</p>
+<p>Link CSS:</p>
+<pre><code class="language-html">&lt;link
+  rel=&quot;stylesheet&quot;
+  type=&quot;text/css&quot;
+  href=&quot;path/to/chameleon/dist/css/chameleon.css&quot;
+/&gt;
+</code></pre>
+<p>Link JavaScript:</p>
+<ol>
+<li>
+<p><strong>with jQuery</strong></p>
+<pre><code class="language-html">&lt;script src=&quot;path/to/chameleon/dist/js/chameleon.js&quot;&gt;&lt;/script&gt;
+</code></pre>
+</li>
+<li>
+<p><strong>without jQuery</strong> (for MediaWiki, WordPress, etc. which already provide jQuery):</p>
+<pre><code class="language-html">&lt;script src=&quot;path/to/chameleon/dist/js/chameleon-no-jquery.js&quot;&gt;&lt;/script&gt;
+</code></pre>
+</li>
+</ol>
+<h3>Gulp/Webpack import</h3>
+<p>If you have a lot of stuff to customize, use a build system like Gulp, Webpack,
+like what we do for openSUSE wiki. You can use a lot of SaSS features to make
+beautiful components.</p>
+<p><a href="https://github.com/openSUSE/wiki/blob/master/skins/Chameleon/gulpfile.js">Gulp configuration example</a></p>
+<p>Import SCSS:</p>
+<pre><code class="language-scss">@import &quot;~opensuse-theme-chameleon/src/scss/chameleon&quot;;
+</code></pre>
+<p>Import JavaScript:</p>
+<ol>
+<li>
+<p>Old way, without ES6 support</p>
+<pre><code class="language-js">require(&quot;opensuse-theme-chameleon&quot;);
+// or
+require(&quot;opensuse-theme-chameleon/dist/js/chameleon-no-jquery.js&quot;);
+</code></pre>
+</li>
+<li>
+<p>New way, with ES6 support</p>
+<pre><code class="language-js">import &quot;opensuse-theme-chameleon&quot;;
+// or
+import &quot;opensuse-theme-chameleon/dist/js/chameleon-no-jquery.js&quot;;
+</code></pre>
+</li>
+</ol>
+<h3>Ruby on Rails import</h3>
+<p>TODO</p>
+<h2>Bootstrap 4 Styles and Components</h2>
+<p><a href="https://getbootstrap.com/docs/4.1/getting-started/introduction/">Read the Bootstrap 4 document</a></p>
+<h2>Chameleon Styles</h2>
+<p>Chameloen has some customization to Bootstrap 4. You can reuse these colors and
+fonts in your styles.</p>
+<h3>Colors</h3>
+<table>
+<thead>
+<tr>
+<th>openSUSE colors</th>
+<th>Value</th>
+<th>Bootstrap colors</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>$opensuse-green</td>
+<td>#73ba25</td>
+<td>$brand-success</td>
+</tr>
+<tr>
+<td>$opensuse-dark</td>
+<td>#173f4f</td>
+<td>$brand-inverse</td>
+</tr>
+<tr>
+<td>$opensuse-cyan</td>
+<td>#35b9ab</td>
+<td>$brand-primary</td>
+</tr>
+<tr>
+<td>$opensuse-cyan2</td>
+<td>#00a489</td>
+<td>$link-color</td>
+</tr>
+<tr>
+<td>$opensuse-green2</td>
+<td>#6da741</td>
+<td></td>
+</tr>
+<tr>
+<td>$opensuse-blue</td>
+<td>#21a4df</td>
+<td>$brand-info</td>
+</tr>
+</tbody>
+</table>
+<h3>Fonts</h3>
+<p>Default</p>
+<ul>
+<li>Font family: Open Sans, Source Sans Pro, sans-serif</li>
+<li>Font weight: 400</li>
+<li>Font style: normal</li>
+</ul>
+<p>Title and heading</p>
+<ul>
+<li>Font family: Open Sans Condensed, Source Sans Pro, sans-serif</li>
+<li>Font weight: 700</li>
+</ul>
+<p>Source code and commands</p>
+<ul>
+<li>Font family: Source Code Pro, monospace</li>
+<li>Font weight: 400</li>
+</ul>
+<h2>Icons</h2>
+<p>Use Typicons as basic icon set for UI. See <a href="http://typicons.com/">http://typicons.com/</a>.</p>
+<pre><code class="language-html">&lt;span class=&quot;typcn typcn-arrow-left&quot;&gt;&lt;/span&gt;
+</code></pre>
+<p>For icons not covered by Typicons, we create our own in SVG format.</p>
+<h2>Translations</h2>
+<p>The theme is shipped with some translations for navbar and footer links, so that
+our translators won't need to translate the same content for each site.</p>
+<pre><code class="language-html">&lt;a
+  class=&quot;nav-link l10n&quot;
+  data-msg-id=&quot;software&quot;
+  href=&quot;https://software.opensuse.org/&quot;
+&gt;
+  Software
+&lt;/a&gt;
+</code></pre>
+<p>Class <code>l10n</code> makes the element localizable. <code>data-msg-id</code> attribute defines the
+message key so that it can be find in translation files.</p>
+<h2>Development</h2>
+<h3>Install</h3>
+<pre><code>sudo zypper install git nodejs10
+sudo npm install -g gulp-cli
+</code></pre>
+<h3>Download</h3>
+<p>Fork and clone this repo.</p>
+<h3>Run with hot reload</h3>
+<pre><code>gulp watch
+</code></pre>
+<h3>Build</h3>
+<pre><code>gulp
+</code></pre>
+<h2 id="how-to-use">How to use</h2><h3>Link from CDN</h3><pre><code class="html">&lt;link href=&quot;https://static.opensuse.org/chameleon/dist/css/chameleon.css&quot; rel=&quot;stylesheet&quot;/&gt;</code></pre><p>If your application already provides jQuery (MediaWiki, WordPress, etc.):</p><pre><code class="html">&lt;script src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon-no-jquery.js&quot;&gt;&lt;/script&gt;</code></pre><p>Otherwise:</p><pre><code class="html">&lt;script src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon.js&quot;&gt;&lt;/script&gt;</code></pre><h3>Install from NPM</h3><pre><code class="bash">npm install --save opensuse-theme-chameleon</code></pre><h3>Import styles to SaSS</h3><pre><code class="scss">@import '~opensuse-theme-chameleon/src/sass/chameleon';</code></pre><h3>Import JavaScript to Browserify/Webpack</h3><pre><code class="js">require('opensuse-theme-chameleon'); // CommonJS</code></pre><pre><code class="js">import 'opensuse-theme-chameleon'; // ES6</code></pre><h2 id="design-language">Design language</h2><p>Based on
 <a href="https://opensuse.github.io/branding-guidelines/">openSUSE Brand Guidelines</a>.</p><p>Here is a
 <a href="https://opensuse.eosdesignsystem.com/">design system</a>
 for openSUSE under development. We are looking forward to adopt it into
-Chameleon.</p><h2 id="usability-accessibility">Usability &amp; accessibility</h2><h3 id="print">Print</h3><p>Our wiki pages, documents, news articles, forum discussions should have
-nice print result. So they can be used for offline educational activities.</p><h3 id="mobile">Mobile</h3><p>Most of our web pages should be mobile friendly. In case users' PC have
-trouble or are unavailable, they can use mobile devices to search information.</p><p>openSUSE has been ported to many different hardware, like Raspberry PI.
-These devices may have a small touch screen.</p><h2 id="components">Components</h2><p>Chameleon is based on Bootstrap 4.3, providing all components from
-<a href="https://getbootstrap.com/">Bootstrap</a>.</p><h3 id="buttons">Buttons</h3><p>Bootstrap provided several color variants of buttons. We don't recommend you
-to use all of them. Instead, you should use as less variants as possible.</p><p>Only the following color variants are recommended:</p><div class="my-3"><button class="btn btn-primary">Primary</button>
-<button class="btn btn-secondary">Secondary</button>
-<button class="btn btn-danger">Danger</button>
-<button class="btn btn-link">Link</button></div><h3 id="inputs">Inputs</h3><p>Text, search, email, password inputs have the same appearance. They are just
-single element components.</p><div class="mb-3"><input class="form-control mb-3" type="text" placeholder="Text input"/><textarea class="form-control" placeholder="Textarea"></textarea></div><p>Selects, checkboxs, radio buttons and file inputs should use custom control.</p><div class="mb-3"><div class="custom-control custom-checkbox mb-3"><input class="custom-control-input" id="custom-check-1" type="checkbox" checked="checked"/><label class="custom-control-label" for="custom-check-1">Checkbox 1</label></div><div class="custom-control custom-checkbox mb-3"><input class="custom-control-input" id="custom-check-2" type="checkbox"/><label class="custom-control-label" for="custom-check-2">Checkbox 2</label></div><div class="custom-control custom-radio mb-3"><input class="custom-control-input" id="custom-radio-1" type="radio" name="custom-radio-1" value="1" checked="checked"/><label class="custom-control-label" for="custom-radio-1">Radio button 1</label></div><div class="custom-control custom-radio mb-3"><input class="custom-control-input" id="custom-radio-2" type="radio" name="custom-radio-1" value="2"/><label class="custom-control-label" for="custom-radio-2">Radio button 2</label></div><select class="custom-select mb-3"><option>gedit</option><option>emacs</option><option>kate</option><option selected="selected">nano</option><option>vim</option></select><div class="custom-file"><input class="custom-file-input" id="custom-file-1" type="file"/><label class="custom-file-label" for="custom-file-1">Choose file</label></div></div><h4>Dark mode switch</h4><div class="my-3"><div class="custom-control custom-switch dark-mode-switch"><input class="custom-control-input" id="switch1" type="checkbox"/><label class="custom-control-label" for="switch1">Dark Mode</label></div></div><h3 id="alerts">Alerts</h3><p>You can only use four alert variants: info, success, warning, danger</p><div class="alert alert-info">This is an alert.
-<a href="#">Link.</a></div><div class="alert alert-success">This is an alert.
-<a href="#">Link.</a></div><div class="alert alert-warning">This is an alert.
-<a href="#">Link.</a></div><div class="alert alert-danger">This is an alert.
-<a href="#">Link.</a></div><h3 id="cards">Cards</h3><div class="row"><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/leap-green.png"/><div class="card-body"><h5 class="card-title">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/logo-gray.png"/><div class="card-body"><h5 class="card-title">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/tumbleweed-green.png"/><div class="card-body"><h5 class="card-title">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div></div><h3>List Group</h3><p>Please don't use contextual classes.</p><ul class="list-group"><li class="list-group-item active">Cras justo odio</li><li class="list-group-item">Dapibus ac facilisis in</li><li class="list-group-item">Morbi leo risus</li><li class="list-group-item">Porta ac consectetur ac</li><li class="list-group-item">Vestibulum at eros</li></ul><h3>Modals</h3><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><div class="modal-title">Modal title</div><button class="close" data-dismiss="modal">&times;</button></div><div class="modal-body"><p>Modal body text goes here.</p></div><div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal">Close</button><button class="btn btn-primary">Save changes</button></div></div></div><h2 id="graphics">Graphics</h2><p>Based on
-<a href="https://github.com/openSUSE/artwork">openSUSE artwork</a>.</p><h3>Application icons</h3><table class="table"><thead><tr><th>16px</th><th>32px</th><th>64px</th><th>Website</th><th>Description</th></tr></thead><tbody><tr><td><img src="./dist/images/app-icons/www-16.svg" width="16" height="16" alt="www icon"/></td><td><img src="./dist/images/app-icons/www.svg" width="32" height="32" alt="www icon"/></td><td><img src="./dist/images/app-icons/www.svg" width="64" height="64" alt="www icon"/></td><td>www.opensuse.org</td><td>Home page icon</td></tr><tr><td><img src="./dist/images/app-icons/software-16.svg" width="16" height="16" alt="software icon"/></td><td><img src="./dist/images/app-icons/software.svg" width="32" height="32" alt="software icon"/></td><td><img src="./dist/images/app-icons/software.svg" width="64" height="64" alt="software icon"/></td><td>software.opensuse.org</td><td>Software search engine icon</td></tr><tr><td><img src="./dist/images/app-icons/wiki-16.svg" width="16" height="16" alt="wiki icon"/></td><td><img src="./dist/images/app-icons/wiki.svg" width="32" height="32" alt="wiki icon"/></td><td><img src="./dist/images/app-icons/wiki.svg" width="64" height="64" alt="wiki icon"/></td><td>en.opensuse.org</td><td>Wiki icon</td></tr><tr><td><img src="./dist/images/app-icons/forum-16.svg" width="16" height="16" alt="forum icon"/></td><td><img src="./dist/images/app-icons/forum.svg" width="32" height="32" alt="forum icon"/></td><td><img src="./dist/images/app-icons/forum.svg" width="64" height="64" alt="forum icon"/></td><td>forums.opensuse.org</td><td>Forum icon</td></tr><tr><td><img src="./dist/images/app-icons/build-16.svg" width="16" height="16" alt="obs icon"/></td><td><img src="./dist/images/app-icons/build.svg" width="32" height="32" alt="obs icon"/></td><td><img src="./dist/images/app-icons/build.svg" width="64" height="64" alt="obs icon"/></td><td>build.opensuse.org</td><td>OBS icon</td></tr></tbody></table><h2 id="examples">Examples</h2><p>We made some examples of how to use Chameleon theme in web applications.</p><ul><li><a href="./www.html">www.opensuse.org</a></li><li><a href="./software.html">software.opensuse.org</a></li><li><a href="./wiki.html">wiki.opensuse.org</a></li><li><a href="./forum.html">forum.opensuse.org</a></li></ul></div><footer class="text-center py-5 bg-dark text-light" id="theme-doc-footer"><div class="container"><p>&copy; 2017-2020 Guo Yunhe. GPLv3</p></div></footer><script src="./dist/js/chameleon.js"></script></body></html>
+Chameleon.</p></div><footer class="text-center py-5 bg-dark text-light" id="theme-doc-footer"><div class="container"><p>&copy; 2017-2020 Guo Yunhe. GPLv3</p></div></footer><script src="./dist/js/chameleon.js"></script></body></html>
